--- a/.gitignore
+++ b/.gitignore
@@ -19,18 +19,21 @@
 # *.eps
 # *.pdf
 
+## Generated if empty string is given at "Please type another file name for output:"
+*.pdf
+
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
 *.bcf
 *.blg
 *-blx.aux
 *-blx.bib
-*.brf
 *.run.xml
 
 ## Build tool auxiliary files:
 *.fdb_latexmk
 *.synctex
+*.synctex(busy)
 *.synctex.gz
 *.synctex.gz(busy)
 *.pdfsync
@@ -48,6 +51,7 @@ acs-*.bib
 
 # beamer
 *.nav
+*.pre
 *.snm
 *.vrb
 
@@ -56,6 +60,22 @@ acs-*.bib
 
 # fixme
 *.lox
+
+# changes
+*.soc
+
+# elsarticle (documentclass of Elsevier journals)
+*.spl
+
+# endnotes
+*.ent
+
+# feynmf/feynmp
+*.mf
+*.mp
+*.t[1-9]
+*.t[1-9][0-9]
+*.tfm
 
 #(r)(e)ledmac/(r)(e)ledpar
 *.end
@@ -84,6 +104,10 @@ acs-*.bib
 # gnuplottex
 *-gnuplottex-*
 
+# gregoriotex
+*.gaux
+*.gtex
+
 # hyperref
 *.brf
 
@@ -109,6 +133,10 @@ acs-*.bib
 *.mtc
 *.mtc[0-9]
 *.mtc[1-9][0-9]
+*.mtc[0-9]*
+*.slf[0-9]*
+*.slt[0-9]*
+*.stc[0-9]*
 
 # minted
 _minted*
@@ -123,10 +151,19 @@ _minted*
 # nomencl
 *.nlo
 
+# pax
+*.pax
+
+# pdfpcnotes
+*.pdfpc
+
 # sagetex
 *.sagetex.sage
 *.sagetex.py
 *.sagetex.scmd
+
+# scrwfile
+*.wrt
 
 # sympy
 *.sout
@@ -151,6 +188,9 @@ pythontex-files-*/
 
 # todonotes
 *.tdo
+
+# easy-todo
+*.lod
 
 # xindy
 *.xdy
@@ -180,4 +220,9 @@ TSWLatexianTemp*
 *~[0-9]*
 
 .DS_Store
-*.pdf
+
+# auto folder when using emacs and auctex
+/auto/*
+
+# expex forward references with \gathertags
+*-tags.tex
